# foxy-backend

./: .gitignore  Cargo.toml  README.md
foxy-broadcaster/: .env  Cargo.toml  README.md  run-broadcaster.sh  start-local.sh
foxy-broadcaster/src/: broadcast_handler.rs  broadcaster_test.rs  main.rs  test_helpers.rs
foxy-lambda/: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Step Functions Workflow.md  Transaction Model.md  Validation Flow.md  key.pem  start-local.sh
foxy-lambda/.github/workflows/: deploy.yml
foxy-lambda/docs/: Backup Keys.md  SKALE Migration Plan.md  authz.md  cloudformation.md  foxy_transaction_system(1).md  identity_privacy.md  identity_tasks.md  phone_checkfoxyusers.md  productionisation.md  transaction_estimate.md  wallet_balance.md
foxy-lambda/src/: lib.rs  main.rs  router.rs
foxy-lambda/src/endpoints/: keys.rs  mod.rs  status.rs  test.rs
foxy-lambda/src/endpoints/auth/: mod.rs  refresh.rs  validate.rs
foxy-lambda/src/endpoints/phone/: check_numbers.rs  device.rs  mod.rs  save_number.rs
foxy-lambda/src/endpoints/transactions/: commit.rs  estimate.rs  history.rs  initiate.rs  mod.rs  single.rs
foxy-lambda/src/endpoints/wallet/: balance.rs  create.rs  fetch.rs  mod.rs
foxy-lambda/src/models/: transactions.rs
foxy-lambda/tests/: integration_tests.rs  phone_checkusers.rs  phone_device.rs  phone_verify.rs  transaction_estimate.rs  transaction_history.rs  transaction_initiate.rs  wallet_balance.rs
foxy-shared/: .env  Cargo.toml
foxy-shared/src/: lib.rs
foxy-shared/src/database/: client.rs  dynamo_identity.rs  errors.rs  mod.rs  transaction_event.rs
foxy-shared/src/models/: auth.rs  errors.rs  estimate_flags.rs  mod.rs  notifications.rs  phone.rs  transactions.rs  user_device.rs  wallet.rs
foxy-shared/src/repositories/: device_repository.rs
foxy-shared/src/services/: authentication.rs  cloudwatch_services.rs  cognito_services.rs  mod.rs  notification_services.rs  queue_services.rs  user_device_service.rs
foxy-shared/src/state_machine/: mod.rs  transaction_event_factory.rs
foxy-shared/src/utilities/: authentication.rs  config.rs  exchange.rs  fees.rs  fields.rs  gas.rs  id_generator.rs  logging.rs  mod.rs  nonce_manager.rs  parsers.rs  phone_numbers.rs  requests.rs  responses.rs  security.rs  test.rs  token_decoding.rs  token_validation.rs  wallet.rs
foxy-shared/src/views/: history_view.rs  mod.rs  status_view.rs
foxy-watcher/: .env  Cargo.toml  start-local.sh
foxy-watcher/src/: errors.rs  main.rs  poll_confirmations.rs  poll_finalizations.rs
