[package]
name = "foxy-broadcaster"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "foxy-broadcaster"
path = "src/main.rs"

[dependencies]
foxy-shared = { path = "../foxy-shared" }
lambda_runtime = "0.13.0"
serde = "1"
tokio = { version = "1", features = ["macros"] }
serde_json = "1.0.140"
aws-sdk-sqs = "1.64.0"
hex = "0.4.3"
ethers-providers = "2"
ethers-core = { version = "2.0" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dotenv = "0.15"
futures = "0.3.31"
env_logger = "0.11.8"
chrono = "0.4.40"
ethers-signers = "2.0.14"
once_cell = "1.21.3"
aws-sdk-dynamodb = "1.65.0"
