[package]
name = "foxy-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
foxy-shared = { path = "../foxy-shared" }
tokio = { version = "1.44.1", features = ["full"] }
lambda_http = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.2.0"
reqwest = { version = "0.12.9", features = ["json"] }
dotenv = "0.15"
log = "0.4.22"
env_logger = "0.11.5"
aws-sdk-cloudwatch = "1.65.0"
aws-sdk-dynamodb = "1.65.0"
aws-sdk-cognitoidentityprovider = "1.73.0"
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
aws-sdk-sts = "1.62.0"
chrono = { version = "0.4", features = ["serde"] }
alloy-primitives = "0.8.24"
ethers-core = "2"
