[package]
name = "foxy-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
lambda_http = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.2.0"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.9", features = ["json"] }
dotenv = "0.15"
log = "0.4.22"
env_logger = "0.11.5"
aws-sdk-cloudwatch = "1.65.0"
aws-sdk-dynamodb = "1.65.0"
aws-sdk-cognitoidentityprovider = "1.73.0"
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
aws-sdk-sts = "1.62.0"
aws-sdk-sqs = "1.64.0"
aws-smithy-types = "1.3.0"
rand = "0.8"
base64 = "0.22.1"
rsa = "0.7"
pkcs1 = { version = "0.8.0-rc.1", features = ["pem"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4"] }
sha2 = "0.10.8"
phonenumber = "0.3"
regex = "1.11.1"
async-trait = "0.1.87"
futures = "0.3.31"
thiserror = "1.0.69"
tracing-subscriber = "0.3.19"
anyhow = "1.0.97"
alloy-primitives = "0.8.24"
rust_decimal = "1.37.1"
bitflags = { version = "2", features = ["serde"] }
ethers-core = "2"
once_cell = "1.20.2"