[package]
name = "foxy-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging + tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# AWS SDK & config
aws-config = "1.5"
aws-sdk-dynamodb = "1.29"

# Ethereum providers
ethers-core = "2"
ethers-providers = "2"

# Serialization & config
dotenv = "0.15"

# Retry/backoff
backoff = "0.4"

# Utilities
futures = "0.3"
once_cell = "1.19"
thiserror = "1.0"

# Shared internal crate
foxy-shared = { path = "../foxy-shared" }
url = "2.5.4"
